<resources>
    <string name="app_name">MoviesDbApp</string>
    <string name="movies">Movies</string>
    <string name="tvshows">tvshows</string>
    <string name="favourite">Favourite</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="on_tv">On TV</string>
    <string name="airing_today">Airing Today</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="logout">Logout</string>
    <string name="trailer">Trailer</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="image">Image data</string>
    <string name="reviews">Reviews</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <string name="upcoming_movies">Upcoming Movies</string>
</resources>
