<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="@dimen/_90sdp"
        android:src="@drawable/ic_mt_player"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/_90sdp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:id="@+id/email"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/edittextdesign"
            android:layout_height="@dimen/_50sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:id="@+id/password"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/edittextdesign"
            android:layout_height="@dimen/_50sdp"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:id="@+id/progressbar"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:textColor="@color/mtplayer"
            android:elevation="@dimen/_5sdp"
            android:background="@drawable/button_style"
            android:layout_margin="@dimen/_10sdp"
            android:id="@+id/login"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            style="@style/textStyle"
            android:text="OR"

            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/new_user"
            android:textColor="@color/mtplayer"
            android:id="@+id/signin"
            android:elevation="@dimen/_5sdp"
            android:background="@drawable/button_style"
            android:layout_margin="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>