<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            style="@style/FrgamentHeadingTextStyle"
            android:text="Movies"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/black"
            android:layout_height="0.5dp"></View>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/now_playing"
            style="@style/textStyle"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            style="@style/RecyclerviewStyle"
            android:elevation="@dimen/_3sdp"
            android:layout_height="wrap_content">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/nowPlaying"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/black"
            android:layout_height="0.5dp"></View>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/upcoming"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/textStyle"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/upcoming"
            style="@style/RecyclerviewStyle"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <View
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/black"
            android:layout_height="0.5dp"></View>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/top_rated"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/textStyle"
            android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/topRated"
        style="@style/RecyclerviewStyle"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
        <View
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/black"
            android:layout_height="0.5dp"></View>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/popular"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/textStyle"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/popular"
            style="@style/RecyclerviewStyle"
            android:elevation="@dimen/_5sdp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>




</androidx.core.widget.NestedScrollView>
