<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                style="@style/seeMore"
                android:visibility="gone"
                android:id="@+id/seeMoreAiring"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/airing_today"
                style="@style/textStyle"
                android:visibility="gone"
                android:id="@+id/airing_today"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            style="@style/RecyclerviewStyle"
            android:elevation="@dimen/_3sdp"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/nowPlaying"
                android:background="@color/recyclerview"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/black"
            android:layout_height="0.5dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/seeMoreOntv"
                android:visibility="gone"
                android:layout_centerVertical="true"
                style="@style/seeMore"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/on_tv"
                android:visibility="gone"
                android:id="@+id/on_tv"
                android:layout_marginTop="@dimen/_5sdp"
                style="@style/textStyle"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/upcoming"
            android:background="@color/recyclerview"
            style="@style/RecyclerviewStyle"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/black"
            android:layout_height="0.5dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/seeMoreTopRated"
                android:layout_centerVertical="true"
                android:visibility="gone"
                style="@style/seeMore"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/top_rated"
                android:id="@+id/TopRated"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                style="@style/textStyle"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/topRated"
            style="@style/RecyclerviewStyle"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:background="@android:color/black"
            android:layout_height="0.5dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/seeMorePopular"
                android:visibility="gone"
                android:layout_centerVertical="true"
                style="@style/seeMore"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/popular"
                android:id="@+id/Popular"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone"
                style="@style/textStyle"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/popular"
            style="@style/RecyclerviewStyle"
            android:elevation="@dimen/_5sdp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>




</androidx.core.widget.NestedScrollView>
